@@ -73,7 +73,7 @@ ActionTable::read_event (const LexerTable& lex,
     return;
 
   Time time (9999, 1, 1, 0);
-  if (!lex.get_time (entries, time))
+  if (!lex.get_time (entries, time, 8))
     return;
 
   const double value = lex.convert_to_double (val);
@@ -100,7 +100,7 @@ ActionTable::read_alist (const LexerTable& lex,
       return;
     }
   Time time (9999, 1, 1, 0);
-  if (!lex.get_time (entries, time))
+  if (!lex.get_time (entries, time, 8))
     return;
 
   alists[time] = &library.lookup (symbol (val));
@@ -120,7 +120,7 @@ ActionTable::read_date (const LexerTable& lex,
     return;
 
   Time time (9999, 1, 1, 0);
-  if (!LexerTable::get_time (val, time))
+  if (!LexerTable::get_time (val, time, 8))
     return;
   
   dates.insert (time);
